// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFields <Checkbox /> should render single checkbox variant 1`] = `
<Checkbox
  FieldProvider={[Function]}
  input={
    Object {
      "name": "single-check-box",
    }
  }
  meta={Object {}}
>
  <SingleCheckbox
    FieldProvider={[Function]}
    input={
      Object {
        "name": "single-check-box",
      }
    }
    meta={Object {}}
  >
    <FormGroup
      hideLabel={true}
      meta={Object {}}
    >
      <FormGroup
        bsClass="form-group"
        validationState={null}
      >
        <div
          className="form-group"
        >
          <Checkbox
            bsClass="checkbox"
            disabled={false}
            inline={false}
            name="single-check-box"
            title=""
          >
            <div
              className="checkbox"
            >
              <label
                title=""
              >
                <input
                  disabled={false}
                  name="single-check-box"
                  type="checkbox"
                />
              </label>
            </div>
          </Checkbox>
        </div>
      </FormGroup>
    </FormGroup>
  </SingleCheckbox>
</Checkbox>
`;

exports[`FormFields <Checkbox /> should render single checkbox variant with a helper text 1`] = `
<Checkbox
  FieldProvider={[Function]}
  helperText="Helper text"
  input={
    Object {
      "name": "single-check-box",
    }
  }
  meta={Object {}}
>
  <SingleCheckbox
    FieldProvider={[Function]}
    helperText="Helper text"
    input={
      Object {
        "name": "single-check-box",
      }
    }
    meta={Object {}}
  >
    <FormGroup
      hideLabel={true}
      meta={Object {}}
    >
      <FormGroup
        bsClass="form-group"
        validationState={null}
      >
        <div
          className="form-group"
        >
          <Checkbox
            bsClass="checkbox"
            disabled={false}
            inline={false}
            name="single-check-box"
            title=""
          >
            <div
              className="checkbox"
            >
              <label
                title=""
              >
                <input
                  disabled={false}
                  name="single-check-box"
                  type="checkbox"
                />
                <FieldLevelHelp
                  buttonClass=""
                  content="Helper text"
                  placement="top"
                  rootClose={true}
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    overlay={
                      <Popover
                        bsClass="popover"
                        id="popover"
                        placement="right"
                      >
                        Helper text
                      </Popover>
                    }
                    placement="top"
                    rootClose={true}
                    trigger={
                      Array [
                        "click",
                      ]
                    }
                  >
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="link"
                      className="popover-pf-info"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <button
                        className="popover-pf-info btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <Icon
                          name="info"
                          type="pf"
                        >
                          <PatternflyIcon
                            className=""
                            name="info"
                          >
                            <span
                              aria-hidden="true"
                              className="pficon pficon-info"
                            />
                          </PatternflyIcon>
                        </Icon>
                      </button>
                    </Button>
                  </OverlayTrigger>
                </FieldLevelHelp>
              </label>
            </div>
          </Checkbox>
        </div>
      </FormGroup>
    </FormGroup>
  </SingleCheckbox>
</Checkbox>
`;

exports[`FormFields <Radio /> should render correctly 1`] = `
<Radio
  FieldProvider={[Function]}
  input={
    Object {
      "name": "radio",
    }
  }
  meta={Object {}}
  options={
    Array [
      Object {
        "label": "option 1",
        "value": 1,
      },
      Object {
        "label": "option 2",
        "value": 2,
      },
    ]
  }
>
  <FormGroup
    meta={Object {}}
  >
    <FormGroup
      bsClass="form-group"
      validationState={null}
    >
      <div
        className="form-group"
      >
        <RadioGroup
          FieldProvider={[Function]}
          input={
            Object {
              "name": "radio",
            }
          }
          options={
            Array [
              Object {
                "label": "option 1",
                "value": 1,
              },
              Object {
                "label": "option 2",
                "value": 2,
              },
            ]
          }
        >
          <MockFieldProvider
            key="radio-1"
            name="radio"
            render={[Function]}
            type="radio"
            value={1}
          >
            <Radio
              bsClass="radio"
              disabled={false}
              inline={false}
              onChange={[Function]}
              title=""
            >
              <div
                className="radio"
              >
                <label
                  title=""
                >
                  <input
                    disabled={false}
                    onChange={[Function]}
                    type="radio"
                  />
                  option 1
                </label>
              </div>
            </Radio>
          </MockFieldProvider>
          <MockFieldProvider
            key="radio-2"
            name="radio"
            render={[Function]}
            type="radio"
            value={2}
          >
            <Radio
              bsClass="radio"
              disabled={false}
              inline={false}
              onChange={[Function]}
              title=""
            >
              <div
                className="radio"
              >
                <label
                  title=""
                >
                  <input
                    disabled={false}
                    onChange={[Function]}
                    type="radio"
                  />
                  option 2
                </label>
              </div>
            </Radio>
          </MockFieldProvider>
        </RadioGroup>
      </div>
    </FormGroup>
  </FormGroup>
</Radio>
`;

exports[`FormFields <Switch /> should render Switch correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render Switch with label correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    label="Label"
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      label="Label"
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          label="Label"
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            label="Label"
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              label="Label"
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel
                    bsClass="control-label"
                    srOnly={false}
                  >
                    <label
                      className="control-label"
                    >
                      Label
                    </label>
                  </ControlLabel>
                  <Switch
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render Switch with onText (custom prop) correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    onText="OnText"
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
      onText="OnText"
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
          onText="OnText"
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
            onText="OnText"
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="OnText"
                  >
                    <div>
                      <label
                        className="pf3-switch"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            OnText
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render Switch with placeholder correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    placeholder="Placeholder"
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
      placeholder="Placeholder"
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
          placeholder="Placeholder"
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
            placeholder="Placeholder"
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render disabled Switch correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    isDisabled={true}
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      isDisabled={true}
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          isDisabled={true}
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            isDisabled={true}
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    dataType="someDataType"
                    disabled={true}
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch disabled"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={-1}
                      >
                        <input
                          dataType="someDataType"
                          disabled={true}
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render mini Switch correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    bsSize="mini"
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      bsSize="mini"
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          bsSize="mini"
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            bsSize="mini"
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    bsSize="mini"
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch mini"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render readOnly Switch correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    isReadOnly={true}
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      isReadOnly={true}
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          isReadOnly={true}
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            isReadOnly={true}
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    dataType="someDataType"
                    id="someIdKey"
                    isReadOnly={true}
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch disabled"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={-1}
                      >
                        <input
                          dataType="someDataType"
                          disabled={true}
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <Switch /> should render sm Switch correctly 1`] = `
<RenderWithProvider
  value={
    Object {
      "formOptions": Object {
        "handleSubmit": [MockFunction],
      },
    }
  }
>
  <Switch
    FieldProvider={[Function]}
    bsSize="mn"
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
  >
    <FieldProvider
      bsSize="mn"
      component={[Function]}
      dataType="someDataType"
      id="someIdKey"
      input={
        Object {
          "name": "Name of the field",
          "value": "",
        }
      }
      meta={
        Object {
          "error": false,
          "touched": false,
        }
      }
    >
      <div>
        <MockFieldProvider
          bsSize="mn"
          component={[Function]}
          dataType="someDataType"
          id="someIdKey"
          input={
            Object {
              "name": "Foo",
              "onChange": [MockFunction],
            }
          }
          meta={
            Object {
              "error": false,
              "touched": false,
            }
          }
        >
          <SwitchGroup
            bsSize="mn"
            dataType="someDataType"
            id="someIdKey"
            input={
              Object {
                "name": "Foo",
                "onChange": [MockFunction],
              }
            }
            meta={
              Object {
                "error": false,
                "touched": false,
              }
            }
          >
            <FormGroup
              meta={
                Object {
                  "error": false,
                  "touched": false,
                }
              }
            >
              <FormGroup
                bsClass="form-group"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <Switch
                    bsSize="mn"
                    dataType="someDataType"
                    id="someIdKey"
                    name="Foo"
                    offText="OFF"
                    onChange={[Function]}
                    onText="ON"
                  >
                    <div>
                      <label
                        className="pf3-switch mini"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "width": 80,
                          }
                        }
                        tabIndex={0}
                      >
                        <input
                          dataType="someDataType"
                          id="someIdKey"
                          name="Foo"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="pf3-switch-slider"
                        >
                          <span
                            className="on-text"
                            style={
                              Object {
                                "left": -46,
                                "width": 46,
                              }
                            }
                          >
                            ON
                          </span>
                          <span
                            className="divider"
                            style={Object {}}
                          />
                          <span
                            className="off-text"
                            style={
                              Object {
                                "left": 34,
                                "width": 46,
                              }
                            }
                          >
                            OFF
                          </span>
                        </span>
                      </label>
                    </div>
                  </Switch>
                </div>
              </FormGroup>
            </FormGroup>
          </SwitchGroup>
        </MockFieldProvider>
      </div>
    </FieldProvider>
  </Switch>
</RenderWithProvider>
`;

exports[`FormFields <TextField /> should render correctly 1`] = `
<TextField
  input={
    Object {
      "name": "text-field",
    }
  }
  meta={Object {}}
>
  <FormGroup
    meta={Object {}}
  >
    <FormGroup
      bsClass="form-group"
      validationState={null}
    >
      <div
        className="form-group"
      >
        <FormControl
          bsClass="form-control"
          componentClass="input"
          name="text-field"
        >
          <input
            className="form-control"
            name="text-field"
          />
        </FormControl>
      </div>
    </FormGroup>
  </FormGroup>
</TextField>
`;

exports[`FormFields <TextField /> should render correctly with placeholder 1`] = `
<TextField
  input={
    Object {
      "name": "text-field",
    }
  }
  meta={Object {}}
  placeholder="placeholder"
>
  <FormGroup
    meta={Object {}}
  >
    <FormGroup
      bsClass="form-group"
      validationState={null}
    >
      <div
        className="form-group"
      >
        <FormControl
          bsClass="form-control"
          componentClass="input"
          name="text-field"
          placeholder="placeholder"
        >
          <input
            className="form-control"
            name="text-field"
            placeholder="placeholder"
          />
        </FormControl>
      </div>
    </FormGroup>
  </FormGroup>
</TextField>
`;

exports[`FormFields <Textarea /> should render correctly 1`] = `
<Textarea
  input={
    Object {
      "name": "textarea-field",
    }
  }
  meta={Object {}}
>
  <FormGroup
    meta={Object {}}
  >
    <FormGroup
      bsClass="form-group"
      validationState={null}
    >
      <div
        className="form-group"
      >
        <FormControl
          bsClass="form-control"
          componentClass="textarea"
          name="textarea-field"
        >
          <textarea
            className="form-control"
            name="textarea-field"
          />
        </FormControl>
      </div>
    </FormGroup>
  </FormGroup>
</Textarea>
`;

exports[`FormFields <Textarea /> should render correctly with placeholder 1`] = `
<Textarea
  input={
    Object {
      "name": "textarea-field",
    }
  }
  meta={Object {}}
  placeholder="placeholder"
>
  <FormGroup
    meta={Object {}}
  >
    <FormGroup
      bsClass="form-group"
      validationState={null}
    >
      <div
        className="form-group"
      >
        <FormControl
          bsClass="form-control"
          componentClass="textarea"
          name="textarea-field"
          placeholder="placeholder"
        >
          <textarea
            className="form-control"
            name="textarea-field"
            placeholder="placeholder"
          />
        </FormControl>
      </div>
    </FormGroup>
  </FormGroup>
</Textarea>
`;
